<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context=".ViewWord">

    <LinearLayout
        android:id="@+id/wordShow"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="30sp"
        android:paddingRight="30sp">

        <TextView
            android:id="@+id/word"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="60sp"
            android:layout_marginBottom="20sp"
            android:text="@string/word_sample"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/meaning_sample"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/meaning1_sample"
            android:textSize="20sp" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="30sp"
            android:layout_marginBottom="30sp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/text_sample"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sentence_text1_sample"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/translation_sample"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sentence_translation1_sample"
            android:layout_marginTop="5sp"
            android:layout_marginBottom="20sp"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/NoSentence"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="No Sentence" />
    </LinearLayout>
</ScrollView>